--- a/main.ipynb
+++ b/main.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "source": [
-    "# Stochastic Processes & Asset Price Simulation\n",
+    "# Asset Price Simulation\n",
     "## Introduction\n",
     "Financial data has one major limit- it is somewhat scarce. For most assets, practicioners lack observations in order to draw significant conclusions from data. One alternative is to generate fake data. This notebook intends to introduce the main tools - inherited from stochastic processes - that can be used to generate assets prices.\n",
     "\n",
