--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -37,7 +37,7 @@
     "1. Geometric Brownian Motion\n",
     "2. Correlated Variables\n",
     "\n",
-    "## [1. Geometric Brownian Motion](https://en.wikipedia.org/wiki/Geometric_Brownian_motion)\n",
+    "## 1. Geometric Brownian Motion\n",
     "### Model\n",
     "A stochastic process $S_t$ follows a geometric brownian motion if it satisfies the followign stochastic differential equation:\n",
     "$$\n",
